tooling/nargo_cli/tests/snapshots/execute__tests__comptime_str_as_bytes_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "3473148822136030628",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/5XDsQkAAADCMAv+f7PuTgaCFm19Arunwj5IAAAA",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
