tooling/nargo_cli/tests/snapshots/execute__tests__comptime_variable_at_runtime_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "6671157089184593411",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/92XS07DMBCG7SZ9uGlpBBfJq03ZZVEWcIvQEIkNQogD9OhgMZNMBqMuMkZVf6lyHLvf/J7a00SrXhNoQ9Z3qYI2Gaf0X9hXsqCsA2qyqHPS0D5Ba1gy7HggmADD4kry90mxM471CfrPDWF64GeG/X7C/GQOnMNpyFcsbsDm8e9YreFaq99zcIweqgcYW3x/blR/vYFrw3g+9gb1JJ3bO4d/jBXBWg9srTT3WsxL+ezaR3L8rNunUy/8Xed/5od/j/y5H/4L8hd++AXyjRd+XiN/6cd/dxYjP/wt8ld++Efkr73wywbrJ9ZJjKFUXzs25L5cHUtTzeIpNaxTisVfMq/SzwyaxUM/PD9YazF3scNr7BjjNTh2xIkdcVysUJA1FWTNBFlzQdZCkCWZe3OhvpaCLMk9EQmyVoKsS91f+L/heg60qqBNRkoz79Srq3ba3GPdef94fftUTBSkiWHsT9hYSJJA5wV/8NQZvnawrOwGxEMbnoZxKrifjFC5/0mmVQD8qerXQRWScTr/Efr0EGMbjvDZlnXa5nVbb+umKY71LeNb0ReRL0lWthjXEQAA",
  "debug_symbols": "ndbBaoNAEMbxd9mzB3dnZjV5lVKCSUwQRIMxhSK+e9eSlJJK4Z+b4843uvwuM7ljvb+dd0136q9u+za5tj9UY9N3qZpc/v3qeqm6pbqO1TC6rVrm6u7otmZz5k5NW6fHfM7+NJYbf+/cBPlpDWF+z5xfm+x9uAd86npxdir2Q9O2zXn3fJfJ+bj23X9/tMCJEic2NBFynPA4EXBCcEJxwnACmwdsHrB5wOaCzQWbCzYXbC7YXLC5YHPB5oLNBZsrNldsrthcsblic8Xmis0Vmys2V2xu2NywuWFzw+aGzQ2bGzY3bG7Y3LB5xOYRm0dsHrF5XDUvtLgnijJ/ThhORJaYU/VRDU21b+tlE1wOb93hsRimcvy8PE4eq+Nl6A/18TbUyxL5a39cnGKZFZLGptFf",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "fn main() {\n    comptime let mut x = 1;\n\n    println(x); // prints 1\n\n    comptime {\n        x += 1;\n    }\n\n    println(x); // prints 2\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/comptime_variable_at_runtime/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "print_unconstrained"
  ]
}
