tooling/nargo_cli/tests/snapshots/execute__tests__comptime_variable_at_runtime_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "3380375570914139898",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2XwW7CMAyGHdoCbWGrtgfYZbunUCi79bCn2K2DIe0yTdMegEcfkWJqvAyk1ZY4zFIV0lSff7uOUwx0ZvwYQw9DyLMfUz8OyHq0vxo/t/2sTJlfSf7KVlUaiE9Q/zz1TKPDt8hXyr8dec7TruPTWNDveH/l5PcEuvrQih/fn2b8tydizn2sdydiBZDdC9S/BjvSyWM19cxQ88G1hPg2bG0YyL8JsCI2pzG5d/VAuPw5NMU8z/7z3JnbP9h/490xp/H3bQ+rV9aiv8jzE/ipnfpP2PP3fp4x/Zjj5o86t3Vbbufttl20m021bm8Y39m5PkNryIBUDdUvKRzXkCx/dtgDiQp/edA/1OE/In+kw39F/liHfzgzUxX+vEV+pqN/ifxch79A/kSHv0b+VIVfb7CXX0Fn2FfQ9zW5L3f+lCX/9gE47lPA/GdMq/T/B8P8oR6eH+y1mLsioLUIrPEeXAT8FAE/IVYsyEoEWUNB1kiQNRZkSeY+vVBdmSBLsiZyQdZEkHWp9YXnRug70FnjR9vTDNNOtYZ6p8s99p2Pz7f3L2BGQYYIxvmArcUkCfS56BcenOGbAMuZK8BvKdyBDSoTAAA=",
  "debug_symbols": "tdjNaoNAFIbhe5m1C+fnnDPmVkoJJpkEQTQYUyjivXcsUiSVwlc4mxDDfC+Bx9VM5pJOz9ux6a79wxzeJtP253ps+i4/TXNhTkPTts3tuP3ZlMuH9d/nH/e6Wx4fYz2M5hCoMKm7mANRXl+bNuWv5Vz8Ohgru56snP856tz8Xhgb9NKkl2a9tOilo166Uku7Ui9t9dJuL22tWxc2H/t/3GvGg2acNOOsGRfNeNSMV4pxv/vP/1xU6CKU8MLCCwcvPLwI8ILgBcMLgReweYDNCTYn2Jxgc4LNCTYn2Jxgc4LNCTYn2Jxhc4bNGTZn2Jxhc4bNGTZn2Jxhc4bNBTYX2Fxgc4HNBTYX2Fxgc4HNBTYX2DzC5hE2j7B5hM0jbB5h87hrLkHWhcTydSHwImKLOT991ENTn9q03h1cn915c5Uwft7Ty63CfejP6fIc0nK/sLlaWN4FbwvPOZvTXw==",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "fn main() {\n    comptime let mut x = 1;\n\n    println(x); // prints 1\n\n    comptime {\n        x += 1;\n    }\n\n    println(x); // prints 2\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
