tooling/nargo_cli/tests/snapshots/execute__tests__comptime_variable_at_runtime_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "3380375570914139898",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/82XzW6DMAzHQwlt6deq7UVCoaW7cdhhp102aeeUrtIu0zTtAfroK1pcXMtrD9hTLaFAiH7+2xgHItNaFEZrOhhAXsOYhrGH7seHowrXrptlKfEryV+7okiZ+AT152lgRjp8B3yl/LtB4DzsWz6OBfwOD8cYnU9MWx9a8cPz04z/7kzM4xDr05lYIzEt5YaLVY6/WKQof/L81VG/1eHfAz/R4b8Bv6/DP9byQIWfe+APdfSvgJ/q8JfAH+nwa+CPVfjldhp40BvBhzFt75iiebk+lmUR8WfM6XtuiP8R0Sq9r0fEH+ih+YFeB7mbMVrnzD3ag2eMnxnjh2P1BFmxIMsKshJBVl+QJZn7wZXqGgqyJGsiFWSNBFnXWl+wb3DfgY1VYXTdLKPfgRrsWEe7g7xYJs9c32/moDd9fr1/fBtiGISTbgz/gGH9nKyL/+CZC/yIYTV2w/inP0WW+K/CtetooCtBMcWMT9DWI+vxuQnneO4xjE3jeiG5wEUZM3P0BZowehQLfEFzg3X+SwEmKAF4nXQBNt0IOrjdn/qpwrzrYOX6t9AaiwM/MW0c2Cy6j9c/h2u8O8BoO+jclT7b5X7nl367LWp/S/iN4b94af++zNf1oqjLzTL3+eqi/x+k7z3dpxMAAA==",
  "debug_symbols": "zdrBasJAEIDhd9lzDtmdmezGVymlRI0SCInEWCjiu3dTQhFbCr3IfxFXJubPId9prm7fbi/Ht244jGe3ebm6ftw1czcO+XS9FW47dX3fHd/uf3bl8uHla/58aobleJ6baXYbtcK1w95tzPLVh65v89fyVvwYTLVfJ+sg36Mh/Gf0tXBeERWGqKgQFRFRkRAVNaEilIgKj6gIiAqEnQFhZ0DYGRB2BoSdAWFnQNgpCDsFYacg7BSEnYKwUxB2CsJOQdgpCDsFYaci7FSEnYqwUxF2KsJORdipCDsVYaci7FSEnYaw0xB2GsJOQ9hpCDsNYach7DSEnYaw0xB2Vgg7q6fZGTWuozGVjxUBUSGICkVUGKLiVzu9D+sVfvnHZ7wlEdKRIB01oyOWkA4P6QiQDoF06PM6/nIsGqSjInTc8um9mbpm27frAsfhMuzu9jnmj1P7sNpxmsZdu79M7bLkcbffsQgQU5EkP55fXsOkRaryPfJ9PgE=",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "fn main() {\n    comptime let mut x = 1;\n\n    println(x); // prints 1\n\n    comptime {\n        x += 1;\n    }\n\n    println(x); // prints 2\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/comptime_variable_at_runtime/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
